--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,7 @@ jobs:
     working_directory: ~/qtx
     steps:
       - checkout
-      - restore_cache:
-        keys:
-          -
+      - run: composer self-update
       - restore_cache:
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
