--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,8 @@ jobs:
   build:
     docker:
       - image: docksal/cli:php7
-    environment:
-      - WP_TESTS_DIR: "/tmp/wordpress-tests-lib"
-      - WP_CORE_DIR: "/tmp/wordpress/"
-      - XDEBUG_ENABLED: 1
+        environment:
+          XDEBUG_ENABLED: 1
     working_directory: ~/qtx
     steps:
       - checkout
