CI: fixing composer path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - restore_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
-      - run: ./composer install -on --prefer-dist
+      - run: composer install -on --prefer-dist
       - save_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
