--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,14 @@
 {
   "name": "loganyott/qtranslate-x",
-  "type": "wordpress-plugin"
+  "type": "wordpress-plugin",
+  "autoload": {
+    "psr-4": {
+      "qtx\\": "src/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.1",
+    "wp-cli/wp-cli": "^1.1",
+    "wp-coding-standards/wpcs": "^0.11.0"
+  }
 }
